Update source destination definition, fix typos
